Change theme color

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
     <meta name="description" content="puppyland" />
 
-    <meta name="theme-color" media="(prefers-color-scheme: light)" content="#0284c7'" />
+    <meta name="theme-color" media="(prefers-color-scheme: light)" content="#fff5ef" />
     <!-- <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#1d7b02" /> -->
 
     <!-- These meta tags are Apple-specific, and set the web application to run in full-screen mode with a black status bar. Learn more at https://developer.apple.com/library/archive/documentation/AppleApplications/Reference/SafariHTMLRef/Articles/MetaTags.html-->
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-title" content="mimic me" />
+    <meta name="apple-mobile-web-app-title" content="dog island" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
     <!-- This tag is used by the PWA Starter CLI to identify template projects. Don't remove if you are using the CLI. -->
