--- a/index.html
+++ b/index.html
@@ -54,6 +54,19 @@
 
   <body>
     <app-index></app-index>
+    <canvas
+      id="confetti-canvas"
+      style="
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        pointer-events: none;
+        z-index: 9999;
+        display: none;
+      "
+    ></canvas>
     <script>
       if ('serviceWorker' in navigator) {
         navigator.serviceWorker.register('/sw.js');
