Add default alert duration and update alertNotify functions to use it

--- a/index.html
+++ b/index.html
@@ -72,5 +72,11 @@
         navigator.serviceWorker.register('/sw.js');
       }
     </script>
+    
+    <style>
+      .sl-toast-stack {
+        right: unset;
+      }
+    </style>
   </body>
 </html>
