--- a/index.html
+++ b/index.html
@@ -31,12 +31,47 @@
     <!-- Imports the manifest to represent the web application. A web app must have a manifest to be a PWA. -->
     <link rel="manifest" href="/manifest.json" />
 
+    <!-- Performance hints -->
+    <link rel="dns-prefetch" href="https://mydogapi.azurewebsites.net">
+    <link rel="preconnect" href="https://mydogapi.azurewebsites.net" crossorigin>
+    <link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
+    <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
+
     <!-- light mode and dark(changed to light) mode CSS -->
     <link
-      rel="stylesheet"
-      media="(prefers-color-scheme:light), (prefers-color-scheme:dark)"
-      href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.73/dist/themes/light.css"
+      rel="preload"
+      as="style"
+      href="/shoelace/themes/light.css"
+      onload="this.onload=null;this.rel='stylesheet'"
     />
+    <noscript>
+      <link
+        rel="stylesheet"
+        href="/shoelace/themes/light.css"
+      />
+    </noscript>
+    <script>
+      (async () => {
+        try {
+          const r = await fetch('/shoelace/themes/light.css', { method: 'HEAD' });
+          if (!r.ok) throw 0;
+        } catch (e) {
+          const l = document.createElement('link');
+          l.rel = 'stylesheet';
+          l.href = 'https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.73/dist/themes/light.css';
+          document.head.appendChild(l);
+        }
+        try {
+          const r2 = await fetch('/leaflet/leaflet.css', { method: 'HEAD' });
+          if (!r2.ok) throw 0;
+        } catch (e) {
+          const l2 = document.createElement('link');
+          l2.rel = 'stylesheet';
+          l2.href = 'https://unpkg.com/leaflet@1.9.4/dist/leaflet.css';
+          document.head.appendChild(l2);
+        }
+      })();
+    </script>
     <!-- <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
@@ -49,16 +84,48 @@
       crossorigin=""
     ></script> -->
 
+    <link rel="modulepreload" href="/src/app-index.ts" />
     <script type="module" src="/src/app-index.ts"></script>
   </head>
 
   <body>
     <app-index></app-index>
-    <script>
-      if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('/sw.js');
+    <script type="module">
+      if (import.meta.env?.PROD && 'serviceWorker' in navigator) {
+        navigator.serviceWorker.register('/sw.js').then((reg) => {
+          // Refresh toast when a new SW is waiting
+          function listenForWaiting(reg) {
+            if (!reg) return;
+            if (reg.waiting) {
+              const ok = confirm('A new version is available. Refresh now?');
+              if (ok) reg.waiting.postMessage({ type: 'SKIP_WAITING' });
+            }
+            reg.addEventListener('updatefound', () => {
+              const sw = reg.installing;
+              if (!sw) return;
+              sw.addEventListener('statechange', () => {
+                if (sw.state === 'installed' && reg.waiting) {
+                  const ok = confirm('A new version is available. Refresh now?');
+                  if (ok) reg.waiting.postMessage({ type: 'SKIP_WAITING' });
+                }
+              });
+            });
+          }
+          listenForWaiting(reg);
+          navigator.serviceWorker.addEventListener('controllerchange', () => window.location.reload());
+        });
+      } else if ('serviceWorker' in navigator) {
+        // In dev, make sure no SW controls the page to avoid caching dev modules
+        navigator.serviceWorker.getRegistrations().then(regs => regs.forEach(r => r.unregister()));
       }
     </script>
+    <!-- Additional preconnects used in map components (CDNs removed due to self-hosting) -->
+    <link rel="dns-prefetch" href="https://a.tile.openstreetmap.org">
+    <link rel="preconnect" href="https://a.tile.openstreetmap.org" crossorigin>
+    <link rel="dns-prefetch" href="https://b.tile.openstreetmap.org">
+    <link rel="preconnect" href="https://b.tile.openstreetmap.org" crossorigin>
+    <link rel="dns-prefetch" href="https://c.tile.openstreetmap.org">
+    <link rel="preconnect" href="https://c.tile.openstreetmap.org" crossorigin>
 
     <style>
       .sl-toast-stack {
