--- a/public/offline.html
+++ b/public/offline.html
@@ -5,18 +5,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Offline - Puppyland</title>
     <style>
-      body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, Helvetica, Arial, sans-serif; margin: 0; padding: 2rem; color: #222; background: #fff5ef; }
-      .card { max-width: 480px; margin: 10vh auto 0; background: white; border-radius: 12px; padding: 24px; box-shadow: 0 6px 30px rgba(0,0,0,.08); border: 1px solid rgba(0,0,0,.06); }
-      h1 { margin: 0 0 12px; font-size: 22px; }
-      p { margin: 0 0 10px; line-height: 1.45; }
-      small { color: #666; }
-      .tips { margin-top: 12px; font-size: 14px; }
+      body {
+        font-family:
+          system-ui,
+          -apple-system,
+          Segoe UI,
+          Roboto,
+          Ubuntu,
+          Cantarell,
+          Noto Sans,
+          Helvetica,
+          Arial,
+          sans-serif;
+        margin: 0;
+        padding: 2rem;
+        color: #222;
+        background: #fff5ef;
+      }
+      .card {
+        max-width: 480px;
+        margin: 10vh auto 0;
+        background: white;
+        border-radius: 12px;
+        padding: 24px;
+        box-shadow: 0 6px 30px rgba(0, 0, 0, 0.08);
+        border: 1px solid rgba(0, 0, 0, 0.06);
+      }
+      h1 {
+        margin: 0 0 12px;
+        font-size: 22px;
+      }
+      p {
+        margin: 0 0 10px;
+        line-height: 1.45;
+      }
+      small {
+        color: #666;
+      }
+      .tips {
+        margin-top: 12px;
+        font-size: 14px;
+      }
     </style>
   </head>
   <body>
     <div class="card">
       <h1>You're offline</h1>
-      <p>The app still works for content you've already visited. We'll reconnect when you're back online.</p>
+      <p>
+        The app still works for content you've already visited. We'll reconnect when you're back
+        online.
+      </p>
       <div class="tips">
         <p>Tips:</p>
         <ul>
