Change colors to MINT

--- a/public/offline.html
+++ b/public/offline.html
@@ -20,7 +20,7 @@
         margin: 0;
         padding: 2rem;
         color: #222;
-        background: #fff5ef;
+        background: linear-gradient(135deg, #f2fbf5 0%, #f7fdf9 100%);
       }
       .card {
         max-width: 480px;
