--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <meta name="description" content="puppyland" />
 
-    <meta name="theme-color" media="(prefers-color-scheme: light)" content="#fff5ef" />
+    <meta name="theme-color" media="(prefers-color-scheme: light)" content="#f2fbf5" />
     <!-- <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#1d7b02" /> -->
 
     <!-- These meta tags are Apple-specific, and set the web application to run in full-screen mode with a black status bar. Learn more at https://developer.apple.com/library/archive/documentation/AppleApplications/Reference/SafariHTMLRef/Articles/MetaTags.html-->
