Change colors to GREEN, LIME

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
     <meta name="description" content="puppyland" />
 
-    <meta name="theme-color" media="(prefers-color-scheme: light)" content="#2f6f52" />
-    <!-- <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#1d7b02" /> -->
+    <meta name="theme-color" media="(prefers-color-scheme: light)" content="#10b981" />
+    <!-- <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#065f46" /> -->
 
     <!-- These meta tags are Apple-specific, and set the web application to run in full-screen mode with a black status bar. Learn more at https://developer.apple.com/library/archive/documentation/AppleApplications/Reference/SafariHTMLRef/Articles/MetaTags.html-->
     <meta name="apple-mobile-web-app-capable" content="yes" />
