Change fonts to Rubik + Nunito

--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
     <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin />
 
     <!-- light mode and dark(changed to light) mode CSS -->
+    <!-- Fonts: Rubik (headings/buttons) + Nunito (body) -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&family=Nunito:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="preload"
       as="style"
