Set Nunito font, and Rubik font

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 
     <!-- light mode and dark(changed to light) mode CSS -->
     <!-- Fonts: Rubik (headings/buttons) + Nunito (body) -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&family=Nunito:wght@400;500;600;700&display=swap"
       rel="stylesheet"
